# FifoMaster

./: CMakeLists.txt  Client.cpp  Client1.cpp  Client2.cpp  ClientTest1.cpp  ClientTest2.cpp  Fifo.cpp  README.md  Server.cpp  ServerTest.cpp  diagram_Class.puml  diagram_push_data.puml  diagram_push_data_Client.puml  diagram_push_data_Server.puml  readme
TestTask/libs/Fifo/: CMakeLists.txt  unittest.cmake
TestTask/libs/Fifo/Fifo/: CMakeLists.txt
TestTask/libs/Fifo/Fifo/include/Fifo/: Fifo.h
TestTask/libs/Fifo/FifoBase/: CMakeLists.txt
TestTask/libs/Fifo/FifoBase/include/FifoBase/: FifoBase.h
TestTask/libs/Fifo/FifoRead/: CMakeLists.txt
TestTask/libs/Fifo/FifoRead/include/FifoRead/: FifoRead.h
TestTask/libs/Fifo/FifoRead/lib/: FifoRead.cpp
TestTask/libs/Fifo/FifoWrite/: CMakeLists.txt
TestTask/libs/Fifo/FifoWrite/include/FifoWrite/: FifoWrite.h
TestTask/libs/Fifo/FifoWrite/lib/: FifoWrite.cpp
TestTask/libs/Fifo/Server/: CMakeLists.txt
TestTask/libs/Fifo/Server/include/Server/: Server.h
TestTask/libs/Fifo/Server/lib/: Server.cpp
TestTask/libs/Fifo/Server/test/: Fifo_test_big_data_FIFO.cpp
TestTask/libs/Fifo/Server/test/config/: conf.cmake
TestTask/libs/Fifo/include/Fifo/: Fifo.h  FifoRead.h  FifoWrite.h  Server.h
TestTask/libs/Fifo/lib/: Fifo.cpp  FifoBase.cpp
TestTask/libs/Fifo/test/: Fifo_test.cpp  Fifo_test_big_data.cpp  Fifo_test_big_data_FIFO.cpp  Fifo_test_many_potoc.cpp
TestTask/libs/FifoLib/: CMakeLists.txt
TestTask/libs/FifoLib/Client/: CMakeLists.txt
TestTask/libs/FifoLib/Client/include/Client/: Client.h
TestTask/libs/FifoLib/Client/lib/: Client.cpp
TestTask/libs/FifoLib/Client/test/: Server_test.cpp
TestTask/libs/FifoLib/Fifo/: CMakeLists.txt
TestTask/libs/FifoLib/Fifo/include/Fifo/: Fifo.h
TestTask/libs/FifoLib/Fifo/lib/: Fifo.cpp
TestTask/libs/FifoLib/Fifo/test/: Fifo_test.cpp  Fifo_test_Q_NQ.cpp  Fifo_test_big_data.cpp  Fifo_test_big_data_FIFO.cpp  Fifo_test_big_data_NQ.cpp  Fifo_test_big_data_Q.cpp  Fifo_test_many_potoc.cpp  Fifo_test_many_potoc_NQ_Q.cpp
TestTask/libs/FifoLib/FifoBase/include/FifoBase/: FifoBase.h
TestTask/libs/FifoLib/FifoBase/lib/: FifoBase.cpp
TestTask/libs/FifoLib/FifoF/: CMakeLists.txt
TestTask/libs/FifoLib/FifoF/Fifo/: CMakeLists.txt
TestTask/libs/FifoLib/FifoF/Fifo/test/: Fifo_test_big_data_Q.cpp
TestTask/libs/FifoLib/FifoF/FifoBase/lib/: FifoBase.cpp
TestTask/libs/FifoLib/FifoF/FifoWrite/: CMakeLists.txt
TestTask/libs/FifoLib/FifoRead/: CMakeLists.txt
TestTask/libs/FifoLib/FifoRead/include/FifoRead/: FifoRead.h
TestTask/libs/FifoLib/FifoRead/lib/: FifoRead.cpp
TestTask/libs/FifoLib/FifoRead/test/: Fifo_test.cpp  Fifo_test_big_data.cpp  Fifo_test_big_data_FIFO.cpp  Fifo_test_many_potoc.cpp
TestTask/libs/FifoLib/FifoWrite/: CMakeLists.txt
TestTask/libs/FifoLib/FifoWrite/include/FifoWrite/: FifoIWriter.h  FifoWrite.h  IWriter.h  (+5 more)
TestTask/libs/FifoLib/FifoWrite/lib/: FifoIWrite.cpp  FifoWrite.cpp  FifoWrite0.cpp  FifoWriteDirect.cpp  FifoWriteNQ.cpp  FifoWriteQ.cpp
TestTask/libs/FifoLib/IpcBase/: CMakeLists.txt
TestTask/libs/FifoLib/IpcBase/Fifo/: unittest.cmake
TestTask/libs/FifoLib/IpcBase/FifoBase/: CMakeLists.txt
TestTask/libs/FifoLib/IpcBase/FifoRead/: CMakeLists.txt  unittest.cmake
TestTask/libs/FifoLib/IpcBase/test/: Fifo_test_Q_NQ.cpp  Fifo_test_big_data_NQ.cpp
TestTask/libs/FifoLib/Server/: CMakeLists.txt
TestTask/libs/FifoLib/Server/lib/: Server.cpp
TestTask/libs/FifoLib/Server/test/: Fifo_test_big_data.cpp  Server_test.cpp
TestTask/libs/FifoLib/test/: Server_Client_test.cpp  Server_Client_test_connect.cpp
(+16 files in other folders)
